Skip underlying query analysis if MV is fresh
Analyzing the underlying query can be costly in some scenarios,
especially when it references many tables. An additional benefit of
skipping this analysis is improved availability — MV data sources don’t
need to be reachable when accessing the MV.